fix videos on ios

--- a/style.css
+++ b/style.css
@@ -313,7 +313,6 @@ article p{
 	}
 	.post video{
 		/* object-fit: cover; */
-		background: white;
 	}
 	.posts li{
 		padding: 10px;
